--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chess-tools": "^0.3.0",
     "chess.js": "^0.10.2",
     "codacy-coverage": "^3.0.0",
     "express": "^4.16.3",
     "moxios": "^0.4.0",
     "ndjson": "^1.5.0",
     "nock": "^9.2.5",
-    "oboe": "^2.1.4"
+    "node-uci": "^1.3.0",
+    "oboe": "^2.1.4",
+    "sinon": "^5.0.7"
   }
 }
